--- a/vikbooking/languages/vikbooking-en_US.po
+++ b/vikbooking/languages/vikbooking-en_US.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VikBooking\n"
-"POT-Creation-Date: 2024-12-18 18:04+0100\n"
-"PO-Revision-Date: 2024-12-18 18:04+0100\n"
+"POT-Creation-Date: 2025-01-21 00:01+0100\n"
+"PO-Revision-Date: 2025-01-21 00:01+0100\n"
 "Last-Translator: \n"
 "Language-Team: extensionsforjoomla.com\n"
 "Language: en_US\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.5\n"
+"X-Generator: Poedit 3.0.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;_x:1,2c\n"
 "X-Poedit-SearchPath-0: libraries/language\n"
@@ -70,11 +70,11 @@ msgstr "I couldn't understand how to get it working"
 #: libraries/html/feedback/thickbox.php:71
 #, php-format
 msgid ""
-"Did you read the plugin documentation? You can find it <a href=\"%s\" "
-"target=\"_blank\">here</a>."
+"Did you read the plugin documentation? You can find it <a href=\"%s\" target="
+"\"_blank\">here</a>."
 msgstr ""
-"Did you read the plugin documentation? You can find it <a href=\"%s\" "
-"target=\"_blank\">here</a>."
+"Did you read the plugin documentation? You can find it <a href=\"%s\" target="
+"\"_blank\">here</a>."
 
 #: libraries/html/feedback/thickbox.php:76
 msgid "I no longer need the plugin"
@@ -256,6 +256,7 @@ msgid "bootstrap.renderModal"
 msgstr "bootstrap.renderModal"
 
 #: libraries/html/rss/feed.php:69 libraries/language/admin.php:5022
+#: libraries/language/admin.php:7589 libraries/language/site.php:2075
 msgid "Close"
 msgstr "Close"
 
@@ -1113,10 +1114,12 @@ msgstr "Reservation for"
 
 #: libraries/language/admin.php:573 libraries/language/admin.php:888
 #: libraries/language/admin.php:909 libraries/language/admin.php:3498
-#: libraries/language/site.php:153 libraries/language/site.php:351
-#: libraries/language/site.php:372
-msgid "Check-in Date"
-msgstr "Check-in Date"
+#: libraries/language/admin.php:7577 libraries/language/site.php:153
+#: libraries/language/site.php:351 libraries/language/site.php:372
+#: modules/mod_vikbooking_channelrates/language/handler.php:121
+#: modules/mod_vikbooking_horizontalsearch/language/handler.php:150
+msgid "Check-in date"
+msgstr "Check-in date"
 
 #: libraries/language/admin.php:576
 msgid "At H:M"
@@ -1124,10 +1127,12 @@ msgstr "At H:M"
 
 #: libraries/language/admin.php:579 libraries/language/admin.php:891
 #: libraries/language/admin.php:912 libraries/language/admin.php:3501
-#: libraries/language/site.php:156 libraries/language/site.php:354
-#: libraries/language/site.php:375
-msgid "Check-out Date"
-msgstr "Check-out Date"
+#: libraries/language/admin.php:7580 libraries/language/site.php:156
+#: libraries/language/site.php:354 libraries/language/site.php:375
+#: modules/mod_vikbooking_channelrates/language/handler.php:124
+#: modules/mod_vikbooking_horizontalsearch/language/handler.php:153
+msgid "Check-out date"
+msgstr "Check-out date"
 
 #: libraries/language/admin.php:582
 msgid "Price Type"
@@ -5449,7 +5454,7 @@ msgid "Pay Entire Amount if Non-Refundable Rates"
 msgstr "Pay Entire Amount if Non-Refundable Rates"
 
 #: libraries/language/admin.php:4116
-#, no-php-format
+#, php-format
 msgid ""
 "If enabled, and at least one non-refundable rate plan is selected for the "
 "rooms reservation, then no deposit will be available. Customers will be "
@@ -5593,7 +5598,7 @@ msgstr ""
 "always applied, regardless of this limit."
 
 #: libraries/language/admin.php:4197
-#, no-php-format
+#, php-format
 msgid ""
 "The attribute is an additional information you can pass to the Type of Price "
 "for any number of nights of stay. It is NOT a mandatory field and it can be "
@@ -10190,7 +10195,7 @@ msgid "Derived rate plan"
 msgstr "Derived rate plan"
 
 #: libraries/language/admin.php:6940
-#, no-php-format
+#, php-format
 msgid ""
 "Derived rate plans will automatically inherit any pricing modification from "
 "one parent rate plan. Useful, for example, to set up a Non-Refundable Rate "
@@ -11111,6 +11116,141 @@ msgstr "Driving License"
 msgid "Identity Document"
 msgstr "Identity Document"
 
+#: libraries/language/admin.php:7504
+msgid "Messages per page"
+msgstr "Messages per page"
+
+#: libraries/language/admin.php:7507
+msgid "Unread messages"
+msgstr "Unread messages"
+
+#. TRANSLATORS: Operation performed through Artificial Intelligence.
+#: libraries/language/admin.php:7511
+msgctxt "Operation performed through Artificial Intelligence."
+msgid "AI ✨"
+msgstr "AI ✨"
+
+#. TRANSLATORS: "High" priority.
+#: libraries/language/admin.php:7515
+msgctxt "\"High\" priority."
+msgid "High"
+msgstr "High"
+
+#. TRANSLATORS: "Medium" priority.
+#: libraries/language/admin.php:7519
+msgctxt "\"Medium\" priority."
+msgid "Medium"
+msgstr "Medium"
+
+#. TRANSLATORS: "Low" priority.
+#: libraries/language/admin.php:7523
+msgctxt "\"Low\" priority."
+msgid "Low"
+msgstr "Low"
+
+#: libraries/language/admin.php:7526
+msgid "Sort by priority"
+msgstr "Sort by priority"
+
+#: libraries/language/admin.php:7529
+msgid "Listing"
+msgstr "Listing"
+
+#: libraries/language/admin.php:7532
+msgid "Generate content"
+msgstr "Generate content"
+
+#: libraries/language/admin.php:7535
+msgid "Enter the information to help the AI generate a proper content."
+msgstr "Enter the information to help the AI generate a proper content."
+
+#. TRANSLATORS: AI Assistant default prompt for generating the content of an email message.
+#: libraries/language/admin.php:7539
+msgctxt ""
+"AI Assistant default prompt for generating the content of an email message."
+msgid ""
+"Write the body of an email message to welcome a guest that is arriving next "
+"weekend."
+msgstr ""
+"Write the body of an email message to welcome a guest that is arriving next "
+"weekend."
+
+#: libraries/language/admin.php:7542
+msgid "Generated content"
+msgstr "Generated content"
+
+#: libraries/language/admin.php:7545
+msgid "Use content"
+msgstr "Use content"
+
+#: libraries/language/admin.php:7548
+msgid "Generate contents"
+msgstr "Generate contents"
+
+#: libraries/language/admin.php:7551
+msgid ""
+"Generate texts with custom information in plain-text or HTML format for any "
+"use."
+msgstr ""
+"Generate texts with custom information in plain-text or HTML format for any "
+"use."
+
+#: libraries/language/admin.php:7554
+msgid "Generate reminder messages."
+msgstr "Generate reminder messages."
+
+#: libraries/language/admin.php:7557
+msgid ""
+"Write a check-in reminder message for John Smith for tomorrow, by saying "
+"that the door code will be sent via email 1 hour before the arrival time."
+msgstr ""
+"Write a check-in reminder message for John Smith for tomorrow, by saying "
+"that the door code will be sent via email 1 hour before the arrival time."
+
+#: libraries/language/admin.php:7560
+msgid "Write messages in a precise language."
+msgstr "Write messages in a precise language."
+
+#. TRANSLATORS: Write a message for John Smith.
+#: libraries/language/admin.php:7564
+#, php-format
+msgctxt "Write a message for John Smith."
+msgid "Write a message for %s."
+msgstr "Write a message for %s."
+
+#. TRANSLATORS: AI Assistant instruction for generating a message in a specific language.
+#: libraries/language/admin.php:7568
+#, php-format
+msgctxt ""
+"AI Assistant instruction for generating a message in a specific language."
+msgid "The language of the message should be: %s."
+msgstr "The language of the message should be: %s."
+
+#: libraries/language/admin.php:7571
+msgid "Write a message for a guest."
+msgstr "Write a message for a guest."
+
+#: libraries/language/admin.php:7574
+msgid "Use some of the following placeholder tags, if needed."
+msgstr "Use some of the following placeholder tags, if needed."
+
+#: libraries/language/admin.php:7583 libraries/language/site.php:2069
+#, php-format
+msgid "Minimum stay: %d nights"
+msgstr "Minimum stay: %d nights"
+
+#: libraries/language/admin.php:7586 libraries/language/site.php:2072
+msgid "Clear dates"
+msgstr "Clear dates"
+
+#: libraries/language/admin.php:7592 libraries/language/site.php:2078
+msgid "Amenities"
+msgstr "Amenities"
+
+#: libraries/language/admin.php:7595
+msgid "Optimize database records"
+msgstr "Optimize database records"
+
 #: libraries/language/adminsys.php:45
 msgid "Vik Booking"
 msgstr "Vik Booking"
@@ -11727,11 +11867,11 @@ msgstr "Ready to increase your bookings?"
 
 #: libraries/language/adminsys.php:458
 msgid ""
-"Already have Vik Booking PRO? Upgrade to the PRO version <a "
-"href=\"#upgrade\">here</a>."
+"Already have Vik Booking PRO? Upgrade to the PRO version <a href=\"#upgrade"
+"\">here</a>."
 msgstr ""
-"Already have Vik Booking PRO? Upgrade to the PRO version <a "
-"href=\"#upgrade\">here</a>."
+"Already have Vik Booking PRO? Upgrade to the PRO version <a href=\"#upgrade"
+"\">here</a>."
 
 #: libraries/language/adminsys.php:461
 msgid "Would you like to reduce OTA commissions?"
@@ -12414,8 +12554,8 @@ msgid "Not Available"
 msgstr "Not Available"
 
 #: libraries/language/site.php:495
-msgid "Select a Check-in and Check-out Date"
-msgstr "Select a Check-in and Check-out Date"
+msgid "Select a check-in and check-out date"
+msgstr "Select a check-in and check-out date"
 
 #: libraries/language/site.php:498
 #, php-format
@@ -13716,6 +13856,15 @@ msgstr "Listings: %s."
 msgid "All listings"
 msgstr "All listings"
 
+#: libraries/language/site.php:2081
+#| msgid "All Rooms"
+msgid "All photos"
+msgstr "All photos"
+
+#: libraries/language/site.php:2084
+msgid "Where you will be"
+msgstr "Where you will be"
+
 #: libraries/language/system.php:46
 msgid "Error"
 msgstr "Error"
@@ -14210,14 +14359,6 @@ msgstr ""
 msgid "Refresh Rates"
 msgstr "Refresh Rates"
 
-#: modules/mod_vikbooking_channelrates/language/handler.php:121
-msgid "Check-In Date"
-msgstr "Check-In Date"
-
-#: modules/mod_vikbooking_channelrates/language/handler.php:124
-msgid "Check-Out Date"
-msgstr "Check-Out Date"
-
 #: modules/mod_vikbooking_channelrates/language/handler.php:145
 msgid "Our Best Rate"
 msgstr "Our Best Rate"
@@ -14227,7 +14368,7 @@ msgid "Custom increase mode"
 msgstr "Custom increase mode"
 
 #: modules/mod_vikbooking_channelrates/language/handler.php:223
-#, no-php-format
+#, php-format
 msgid ""
 "The website rates modification rules for the OTAs are taken automatically "
 "from what was set up on Vik Channel Manager. However, it is also possible to "
@@ -14475,14 +14616,6 @@ msgid ""
 msgstr ""
 "Thank you! We have successfully received your request and will reply as soon "
 "as possible."
-
-#: modules/mod_vikbooking_horizontalsearch/language/handler.php:150
-msgid "Check-in date"
-msgstr "Check-in date"
-
-#: modules/mod_vikbooking_horizontalsearch/language/handler.php:153
-msgid "Check-out date"
-msgstr "Check-out date"
 
 #: modules/mod_vikbooking_otareviews/language/handler.php:34
 msgid "VikBooking OTA Reviews"
@@ -14738,6 +14871,18 @@ msgstr "no"
 msgid "Sleep"
 msgstr "Sleep"
 
+#~ msgid "Check-in Date"
+#~ msgstr "Check-in Date"
+
+#~ msgid "Check-out Date"
+#~ msgstr "Check-out Date"
+
+#~ msgid "Check-In Date"
+#~ msgstr "Check-In Date"
+
+#~ msgid "Check-Out Date"
+#~ msgstr "Check-Out Date"
+
 #~ msgid "Check-In Time"
 #~ msgstr "Check-In Time"
 
@@ -14852,8 +14997,8 @@ msgstr "Sleep"
 #~ "WordPress. Everything will be installed on your own website, no external "
 #~ "servers or redirections!<br/>e4jConnect is a PCI-DSS Compliant Channel "
 #~ "Manager Provider, listed as a Premier Partner on the most popular hotel "
-#~ "booking sites. Visit <a href=\"https://e4jconnect.com\" "
-#~ "target=\"_blank\">https://e4jconnect.com</a> for more details."
+#~ "booking sites. Visit <a href=\"https://e4jconnect.com\" target=\"_blank"
+#~ "\">https://e4jconnect.com</a> for more details."
 #~ msgstr ""
 #~ "Would you like to connect your website with the most popular hotel "
 #~ "booking sites of the world? This is possible with the complementary "
@@ -14867,8 +15012,8 @@ msgstr "Sleep"
 #~ "WordPress. Everything will be installed on your own website, no external "
 #~ "servers or redirections!<br/>e4jConnect is a PCI-DSS Compliant Channel "
 #~ "Manager Provider, listed as a Premier Partner on the most popular hotel "
-#~ "booking sites. Visit <a href=\"https://e4jconnect.com\" "
-#~ "target=\"_blank\">https://e4jconnect.com</a> for more details."
+#~ "booking sites. Visit <a href=\"https://e4jconnect.com\" target=\"_blank"
+#~ "\">https://e4jconnect.com</a> for more details."
 
 #~ msgid "Avoid overbooking with Vik Channel Manager!"
 #~ msgstr "Avoid overbooking with Vik Channel Manager!"
