--- a/vikbooking/languages/vikbooking-it_IT.po
+++ b/vikbooking/languages/vikbooking-it_IT.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VikBooking\n"
-"POT-Creation-Date: 2024-12-18 18:04+0100\n"
-"PO-Revision-Date: 2024-12-18 18:07+0100\n"
+"POT-Creation-Date: 2025-01-21 00:01+0100\n"
+"PO-Revision-Date: 2025-01-21 00:02+0100\n"
 "Last-Translator: \n"
 "Language-Team: extensionsforjoomla.com\n"
 "Language: it_IT\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.5\n"
+"X-Generator: Poedit 3.0.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;_x:1,2c\n"
 "X-Poedit-SearchPath-0: libraries/language\n"
@@ -70,11 +70,11 @@ msgstr "Non ho capito come fare a farlo funzionare"
 #: libraries/html/feedback/thickbox.php:71
 #, php-format
 msgid ""
-"Did you read the plugin documentation? You can find it <a href=\"%s\" "
-"target=\"_blank\">here</a>."
+"Did you read the plugin documentation? You can find it <a href=\"%s\" target="
+"\"_blank\">here</a>."
 msgstr ""
-"Hai letto la documentazione del plugin? Puoi trovarla <a href=\"%s\" "
-"target=\"_blank\">qui</a>."
+"Hai letto la documentazione del plugin? Puoi trovarla <a href=\"%s\" target="
+"\"_blank\">qui</a>."
 
 #: libraries/html/feedback/thickbox.php:76
 msgid "I no longer need the plugin"
@@ -257,6 +257,7 @@ msgid "bootstrap.renderModal"
 msgstr "bootstrap.renderModal"
 
 #: libraries/html/rss/feed.php:69 libraries/language/admin.php:5022
+#: libraries/language/admin.php:7589 libraries/language/site.php:2075
 msgid "Close"
 msgstr "Chiudi"
 
@@ -1117,9 +1118,11 @@ msgstr "Prenotazione per"
 
 #: libraries/language/admin.php:573 libraries/language/admin.php:888
 #: libraries/language/admin.php:909 libraries/language/admin.php:3498
-#: libraries/language/site.php:153 libraries/language/site.php:351
-#: libraries/language/site.php:372
-msgid "Check-in Date"
+#: libraries/language/admin.php:7577 libraries/language/site.php:153
+#: libraries/language/site.php:351 libraries/language/site.php:372
+#: modules/mod_vikbooking_channelrates/language/handler.php:121
+#: modules/mod_vikbooking_horizontalsearch/language/handler.php:150
+msgid "Check-in date"
 msgstr "Data check-in"
 
 #: libraries/language/admin.php:576
@@ -1128,9 +1131,11 @@ msgstr "A H:M"
 
 #: libraries/language/admin.php:579 libraries/language/admin.php:891
 #: libraries/language/admin.php:912 libraries/language/admin.php:3501
-#: libraries/language/site.php:156 libraries/language/site.php:354
-#: libraries/language/site.php:375
-msgid "Check-out Date"
+#: libraries/language/admin.php:7580 libraries/language/site.php:156
+#: libraries/language/site.php:354 libraries/language/site.php:375
+#: modules/mod_vikbooking_channelrates/language/handler.php:124
+#: modules/mod_vikbooking_horizontalsearch/language/handler.php:153
+msgid "Check-out date"
 msgstr "Data check-out"
 
 #: libraries/language/admin.php:582
@@ -5460,7 +5465,7 @@ msgid "Pay Entire Amount if Non-Refundable Rates"
 msgstr "Paga intero importo per tariffe non-rimborsabili"
 
 #: libraries/language/admin.php:4116
-#, no-php-format
+#, php-format
 msgid ""
 "If enabled, and at least one non-refundable rate plan is selected for the "
 "rooms reservation, then no deposit will be available. Customers will be "
@@ -5468,8 +5473,8 @@ msgid ""
 "met, has higher priority than any other."
 msgstr ""
 "Se abilitato, ed almeno un piano tariffario selezionato è di tipo non-"
-"rimborsabile, l’acconto sarà disabilitato. I clienti dovranno pagare il 100% "
-"della prenotazione. Questo parametro ha priorità su tutti gli altri."
+"rimborsabile, l’acconto sarà disabilitato. I clienti dovranno pagare il "
+"100% della prenotazione. Questo parametro ha priorità su tutti gli altri."
 
 #: libraries/language/admin.php:4119
 msgid "Hide for Non-Refundable Rates"
@@ -5607,7 +5612,7 @@ msgstr ""
 "selezionati saranno sempre applicati, a prescindere da questo valore."
 
 #: libraries/language/admin.php:4197
-#, no-php-format
+#, php-format
 msgid ""
 "The attribute is an additional information you can pass to the Type of Price "
 "for any number of nights of stay. It is NOT a mandatory field and it can be "
@@ -10243,7 +10248,7 @@ msgid "Derived rate plan"
 msgstr "Tariffa derivata"
 
 #: libraries/language/admin.php:6940
-#, no-php-format
+#, php-format
 msgid ""
 "Derived rate plans will automatically inherit any pricing modification from "
 "one parent rate plan. Useful, for example, to set up a Non-Refundable Rate "
@@ -11177,6 +11182,143 @@ msgstr "Patente di guida"
 msgid "Identity Document"
 msgstr "Carta d’identità"
 
+#: libraries/language/admin.php:7504
+msgid "Messages per page"
+msgstr "Messaggi per pagina"
+
+#: libraries/language/admin.php:7507
+msgid "Unread messages"
+msgstr "Messaggi non letti"
+
+#. TRANSLATORS: Operation performed through Artificial Intelligence.
+#: libraries/language/admin.php:7511
+msgctxt "Operation performed through Artificial Intelligence."
+msgid "AI ✨"
+msgstr "IA ✨"
+
+#. TRANSLATORS: "High" priority.
+#: libraries/language/admin.php:7515
+msgctxt "\"High\" priority."
+msgid "High"
+msgstr "Alta"
+
+#. TRANSLATORS: "Medium" priority.
+#: libraries/language/admin.php:7519
+msgctxt "\"Medium\" priority."
+msgid "Medium"
+msgstr "Media"
+
+#. TRANSLATORS: "Low" priority.
+#: libraries/language/admin.php:7523
+msgctxt "\"Low\" priority."
+msgid "Low"
+msgstr "Bassa"
+
+#: libraries/language/admin.php:7526
+msgid "Sort by priority"
+msgstr "Ordina per priorità"
+
+#: libraries/language/admin.php:7529
+msgid "Listing"
+msgstr "Annuncio"
+
+#: libraries/language/admin.php:7532
+msgid "Generate content"
+msgstr "Genera contenuto"
+
+#: libraries/language/admin.php:7535
+msgid "Enter the information to help the AI generate a proper content."
+msgstr ""
+"Inserisci le informazioni per aiutare l'IA a generare un contenuto "
+"appropriato."
+
+#. TRANSLATORS: AI Assistant default prompt for generating the content of an email message.
+#: libraries/language/admin.php:7539
+msgctxt ""
+"AI Assistant default prompt for generating the content of an email message."
+msgid ""
+"Write the body of an email message to welcome a guest that is arriving next "
+"weekend."
+msgstr ""
+"Scrivi il contenuto di un messaggio email per dare il benvenuto ad un ospite "
+"che arriverà il prossimo fine settimana."
+
+#: libraries/language/admin.php:7542
+msgid "Generated content"
+msgstr "Contenuto generato"
+
+#: libraries/language/admin.php:7545
+msgid "Use content"
+msgstr "Utilizza contenuto"
+
+#: libraries/language/admin.php:7548
+msgid "Generate contents"
+msgstr "Genera contenuti"
+
+#: libraries/language/admin.php:7551
+msgid ""
+"Generate texts with custom information in plain-text or HTML format for any "
+"use."
+msgstr ""
+"Genera testi con informazioni personalizzate in formato testuale o HTML per "
+"qualsiasi utilizzo."
+
+#: libraries/language/admin.php:7554
+msgid "Generate reminder messages."
+msgstr "Genera messaggi di promemoria."
+
+#: libraries/language/admin.php:7557
+msgid ""
+"Write a check-in reminder message for John Smith for tomorrow, by saying "
+"that the door code will be sent via email 1 hour before the arrival time."
+msgstr ""
+"Scrivi un promemoria di check-in per Mario Rossi per domani, dicendo che il "
+"codice di accesso verrà inviato per email 1 ora prima dell'arrivo."
+
+#: libraries/language/admin.php:7560
+msgid "Write messages in a precise language."
+msgstr "Scrivi messaggi in una lingua precisa."
+
+#. TRANSLATORS: Write a message for John Smith.
+#: libraries/language/admin.php:7564
+#, php-format
+msgctxt "Write a message for John Smith."
+msgid "Write a message for %s."
+msgstr "Scrivi un messaggio per %s."
+
+#. TRANSLATORS: AI Assistant instruction for generating a message in a specific language.
+#: libraries/language/admin.php:7568
+#, php-format
+msgctxt ""
+"AI Assistant instruction for generating a message in a specific language."
+msgid "The language of the message should be: %s."
+msgstr "La lingua del messaggio deve essere: %s."
+
+#: libraries/language/admin.php:7571
+msgid "Write a message for a guest."
+msgstr "Scrivi un messaggio per un ospite."
+
+#: libraries/language/admin.php:7574
+msgid "Use some of the following placeholder tags, if needed."
+msgstr "Utilizza alcuni dei seguenti tag di segnaposto, se necessario."
+
+#: libraries/language/admin.php:7583 libraries/language/site.php:2069
+#, php-format
+msgid "Minimum stay: %d nights"
+msgstr "Soggiorno minimo: %d notti"
+
+#: libraries/language/admin.php:7586 libraries/language/site.php:2072
+msgid "Clear dates"
+msgstr "Cancella le date"
+
+#: libraries/language/admin.php:7592 libraries/language/site.php:2078
+msgid "Amenities"
+msgstr "Servizi"
+
+#: libraries/language/admin.php:7595
+msgid "Optimize database records"
+msgstr "Ottimizza record database"
+
 #: libraries/language/adminsys.php:45
 msgid "Vik Booking"
 msgstr "Vik Booking"
@@ -11799,11 +11941,11 @@ msgstr "Pronto a ricevere più prenotazioni?"
 
 #: libraries/language/adminsys.php:458
 msgid ""
-"Already have Vik Booking PRO? Upgrade to the PRO version <a "
-"href=\"#upgrade\">here</a>."
+"Already have Vik Booking PRO? Upgrade to the PRO version <a href=\"#upgrade"
+"\">here</a>."
 msgstr ""
-"Hai già Vik Booking PRO? Passa alla versione PRO cliccando <a "
-"href=\"#upgrade\">qui</a>."
+"Hai già Vik Booking PRO? Passa alla versione PRO cliccando <a href=\"#upgrade"
+"\">qui</a>."
 
 #: libraries/language/adminsys.php:461
 msgid "Would you like to reduce OTA commissions?"
@@ -12496,7 +12638,7 @@ msgid "Not Available"
 msgstr "Non disponibile"
 
 #: libraries/language/site.php:495
-msgid "Select a Check-in and Check-out Date"
+msgid "Select a check-in and check-out date"
 msgstr "Seleziona una data di check-in e check-out"
 
 #: libraries/language/site.php:498
@@ -13809,6 +13951,14 @@ msgstr "Proprietà: %s."
 msgid "All listings"
 msgstr "Tutte le proprietà"
 
+#: libraries/language/site.php:2081
+msgid "All photos"
+msgstr "Tutte le foto"
+
+#: libraries/language/site.php:2084
+msgid "Where you will be"
+msgstr "Dove sarai"
+
 #: libraries/language/system.php:46
 msgid "Error"
 msgstr "Errore"
@@ -14308,14 +14458,6 @@ msgstr ""
 msgid "Refresh Rates"
 msgstr "Ricalcola tariffe"
 
-#: modules/mod_vikbooking_channelrates/language/handler.php:121
-msgid "Check-In Date"
-msgstr "Data check-in"
-
-#: modules/mod_vikbooking_channelrates/language/handler.php:124
-msgid "Check-Out Date"
-msgstr "Data check-out"
-
 #: modules/mod_vikbooking_channelrates/language/handler.php:145
 msgid "Our Best Rate"
 msgstr "Miglior prezzo sul sito"
@@ -14325,7 +14467,7 @@ msgid "Custom increase mode"
 msgstr "Modalità aumento personalizzata"
 
 #: modules/mod_vikbooking_channelrates/language/handler.php:223
-#, no-php-format
+#, php-format
 msgid ""
 "The website rates modification rules for the OTAs are taken automatically "
 "from what was set up on Vik Channel Manager. However, it is also possible to "
@@ -14571,14 +14713,6 @@ msgid ""
 msgstr ""
 "Grazie! Abbiamo ricevuto la tua richiesta con successo e ti risponderemo il "
 "prima possibile."
-
-#: modules/mod_vikbooking_horizontalsearch/language/handler.php:150
-msgid "Check-in date"
-msgstr "Data check-in"
-
-#: modules/mod_vikbooking_horizontalsearch/language/handler.php:153
-msgid "Check-out date"
-msgstr "Data check-out"
 
 #: modules/mod_vikbooking_otareviews/language/handler.php:34
 msgid "VikBooking OTA Reviews"
@@ -14836,6 +14970,18 @@ msgstr "no"
 msgid "Sleep"
 msgstr "Posto letto"
 
+#~ msgid "Check-in Date"
+#~ msgstr "Data check-in"
+
+#~ msgid "Check-out Date"
+#~ msgstr "Data check-out"
+
+#~ msgid "Check-In Date"
+#~ msgstr "Data check-in"
+
+#~ msgid "Check-Out Date"
+#~ msgstr "Data check-out"
+
 #~ msgid "Check-In Time"
 #~ msgstr "Ora check-in"
 
@@ -14948,8 +15094,8 @@ msgstr "Posto letto"
 #~ "WordPress. Everything will be installed on your own website, no external "
 #~ "servers or redirections!<br/>e4jConnect is a PCI-DSS Compliant Channel "
 #~ "Manager Provider, listed as a Premier Partner on the most popular hotel "
-#~ "booking sites. Visit <a href=\"https://e4jconnect.com\" "
-#~ "target=\"_blank\">https://e4jconnect.com</a> for more details."
+#~ "booking sites. Visit <a href=\"https://e4jconnect.com\" target=\"_blank"
+#~ "\">https://e4jconnect.com</a> for more details."
 #~ msgstr ""
 #~ "Desideri connettere il tuo sito con i più popolari siti di prenotazione "
 #~ "nel mondo? Questo è possibile con il plugin complementare Vik Channel "
